--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       sizes="32x32"
       href="images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/nice-select.css" />
     <link rel="stylesheet" href="css/custom_spacing.css" />
     <link rel="stylesheet" href="css/venobox.min.css" />
@@ -44,7 +44,7 @@
             <div class="banner_slider_overlay">
               <div id="hero" class="hero">
                 <div class="hero-box">
-                  <h1 class="hero-header">HALAL FOODS</h1>
+                  <h1 class="hero-header">YUM FOODS</h1>
                   <p class="hero-text">LITE BILLIGARE, LIKA YUM</p>
                 </div>
               </div>
@@ -76,9 +76,9 @@
     <!--=============================
         CATEGORIES
     ==============================-->
-    <section class="team mt_50 text-center">
+    <section class="team text-center">
       <div class="container">
-        <div class="section_heading mb_25">
+        <div class="section_heading">
           <h2 class="mobile">VÅRA MENYER</h2>
         </div>
         <div class="row team_slider">
@@ -104,7 +104,7 @@
               <div class="single_team_img_services">
                 <a href="yum_menu.html" tabindex="0">
                   <img
-                    src="./images/category/Yumrattercategory.jpg"
+                    src="./images/category/yumrattercategory.jpg"
                     alt="kategori-yum-rätter"
                     class="img-fluid w-100"
                 /></a>
@@ -138,7 +138,7 @@
               <div class="single_team_img_services">
                 <a href="premium_menu.html" tabindex="0">
                   <img
-                    src="./images/category/Premiumrattercategory.png"
+                    src="./images/category/premiumrattercategory.jpg"
                     alt="kategori-premium-rätter"
                     class="img-fluid w-100"
                 /></a>
